# allycat

./: .gitignore  4_query.ipynb  4_query.py  5_nlipserver.py  README.md  app.py  app_chainlit.py  app_flask.py  env.sample.txt  llm_service.py  my_config.py  requirements.txt
app/: app_chainlit.py
archived/: 2b_process_html_dpk.py
common/: my_config.py
docs/: customizing-allycat.md  running-allycat.md  running-natively.md  setup-python-env.md
graphrag-neo4j-milvus-ollama/: 2_process_files.ipynb  2_process_files.py  2b_process_graph_data.py  3_save_to_neo4j.py  3_save_to_vector_db.ipynb  3_save_to_vector_db.py  Dockerfile  README.md  app_chainlit_graph.py  docker-compose.yml  docker-startup.sh  env.sample.txt  file_utils.py  litellm_patch.py  my_config.py  pyproject.toml  query_utils.py  requirements-docker.txt  requirements-runtime.txt  requirements.txt
graphrag-neo4j-zilliz-nebius/: .dockerignore  1_crawl_site.py  3_save_to_vector_db_zilliz.py  4_query_graph.py  Dockerfile  README.md  app_flask_graph.py  docker-compose.yml  docker-startup.sh  env.sample.txt  my_config.py  requirements-docker.txt
rag-local-milvus-ollama/: 3_save_to_vector_db.ipynb  3_save_to_vector_db.py  4_query.ipynb  4_query.py  Dockerfile  README.md  app_flask.py  env.sample.txt  (+9 more)
rag-remote/: .dockerignore  3_save_to_vector_db.ipynb  3_save_to_vector_db.py  4_query.ipynb  4_query.py  Dockerfile  README.md  app_chainlit.py  app_flask.py  docker-startup.sh  env.sample.txt  mcp.md  mcp_client.py  mcp_server.py  my_config.py  pyproject.toml  requirements-docker.txt  requirements.txt  setup.md
(+29 files in other folders)
